--- a/Test/kuleczka/index.html
+++ b/Test/kuleczka/index.html
@@ -9,11 +9,15 @@
 
 </head>
 <body>
-        <div id="stol">
-            <div id="kulka">
+        <div class="stol">
+            <div class="kulka">
 
             </div>
+            <div class="dziura">
+
+            </div>
+            
         </div>
               
-        <pre id="output"></pre>
+        <pre class="output"></pre>
 </body>
