--- a/Test/kuleczka/index.html
+++ b/Test/kuleczka/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <div class="stol">
-            <div class="kulka">
+            <div class="kuleczka">
 
             </div>
             <div class="dziura">
