--- a/Test/kuleczka/index.html
+++ b/Test/kuleczka/index.html
@@ -1,23 +1,22 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kulka</title>
+    <title>Kuleczka</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 
 </head>
 <body>
-        <div class="stol">
-            <div class="kuleczka">
 
-            </div>
-            <div class="dziura">
+    <div class="garden">
+      <div class="ball"></div>
+      <div class="hole"></div>
+    </div>
+  
+    <pre class="output"></pre>
 
-            </div>
-            
-        </div>
-              
-        <pre class="output"></pre>
+    <script type="text/javascript" src="skrypt.js"></script>
 </body>
+</html>
