--- a/Test/kuleczka/index.html
+++ b/Test/kuleczka/index.html
@@ -14,6 +14,8 @@
       <div class="ball"></div>
       <div class="hole"></div>
     </div>
+  
+    <pre class="output"></pre>
 
     <script type="text/javascript" src="skrypt.js"></script>
 </body>
